--- a/css/themes/vnwk/jquery-ui-1.8.4.vnwk.css
+++ b/css/themes/vnwk/jquery-ui-1.8.4.vnwk.css
@@ -58,7 +58,7 @@
 ----------------------------------*/
 .ui-widget { font-family: Arial,sans-serif; font-size: 1.1em; }
 .ui-widget .ui-widget { font-size: 1em; }
-.ui-widget input, .ui-widget select, .ui-widget textarea, .ui-widget button { font-family: Arial,sans-serif; font-size: 14px; }
+.ui-widget input, .ui-widget select, .ui-widget textarea, .ui-widget button { font-family: Arial,sans-serif; font-size: 1em; }
 .ui-widget-content { border: 1px solid #eeeeee; background: #ffffff url(images/ui-bg_flat_75_ffffff_40x100.png) 50% 50% repeat-x; color: #333333; }
 .ui-widget-content a { color: #333333; }
 .ui-widget-header { border: 1px solid #e3a1a1; background: #db1c00 url(images/ui-bg_highlight-soft_15_db1c00_1x100.png) 50% 50% repeat-x; color: #ffffff; font-weight: bold; }
