Added newest fixes
git-svn-id: svn://109.123.66.160/home/vnwkrepos/trunk@309 46499d64-588c-4cb2-b276-432f5e434212

--- a/css/integrated.css
+++ b/css/integrated.css
@@ -1,3 +1,4 @@
+@import "slimbox2.css";
 /*
 @import "weatherForecast.css";
 @import "slimbox2.css";
@@ -1306,3 +1307,4 @@ div.demo-description {
     margin: 5px;
     overflow: inherit;
 }
+
