--- a/trunk/css/integrated.css
+++ b/trunk/css/integrated.css
@@ -1,3 +1,4 @@
+@import "slimbox2.css";
 /*
 @import "weatherForecast.css";
 @import "slimbox2.css";
@@ -1306,3 +1307,4 @@ div.demo-description {
     margin: 5px;
     overflow: inherit;
 }
+
