Added Facebook like buttons
git-svn-id: svn://localhost/home/vnwkrepos/trunk@346 46499d64-588c-4cb2-b276-432f5e434212

--- a/css/integrated.css
+++ b/css/integrated.css
@@ -542,6 +542,7 @@ table.main {
 	clear: both;
 	margin-top: 20px;
 	background: #FFF;
+	width: 1000px;
 }
 .main .top_search {
 	border-right:none;
