--- a/trunk/css/integrated.css
+++ b/trunk/css/integrated.css
@@ -532,7 +532,9 @@ table.leftmenu{
 	background-color: white;
 	border: none;
 }
-
+td.right{
+    width: 180px;
+}
 #destinationDiv{
 	margin-left: 10px;	
 	width: 180px;
