git-svn-id: svn://109.123.66.160/home/vnwkrepos/trunk@375 46499d64-588c-4cb2-b276-432f5e434212

--- a/css/integrated.css
+++ b/css/integrated.css
@@ -520,7 +520,7 @@ td.left {
 }
 
 td.center {
-	width : 640px;
+	width : 100%;
 	vertical-align: top;
 	border-bottom: 1px solid #C8C8C8;
 	background:#FFFFFF;
