fix error, add like question
git-svn-id: svn://localhost/home/vnwkrepos/trunk@387 46499d64-588c-4cb2-b276-432f5e434212

--- a/css/integrated.css
+++ b/css/integrated.css
@@ -1269,7 +1269,9 @@ div.demo-description {
 	margin:0px;
 	padding:0px;
 }
-
+.phantrang{
+    text-align: center;
+}
 #qanda{
     width: 180px;
     float: left;
@@ -1312,4 +1314,23 @@ div.demo-description {
     margin: 5px;
     overflow: inherit;
 }
-
+._like{
+    background-color:#EFEFEF;
+    border:1px solid #C1C1C1;
+    font-weight:normal;
+    height:14px;
+    margin-left:1px;
+    min-width:15px;
+    padding:1px 2px;
+    text-align:center;
+}
+._liked{
+    background-color:#EFEFEF;
+    border:1px solid #C1C1C1;
+    font-weight:normal;
+    height:14px;
+    margin-left:1px;
+    min-width:15px;
+    padding:1px 2px;
+    text-align:center;
+}
