Changed background of td.right to grey
git-svn-id: svn://localhost/home/vnwkrepos/trunk@388 46499d64-588c-4cb2-b276-432f5e434212

--- a/css/integrated.css
+++ b/css/integrated.css
@@ -536,6 +536,7 @@ table.leftmenu{
 }
 td.right{
     width: 180px;
+	background-color: rgba(243, 243, 243, 0.898438);
 }
 #destinationDiv{
 	margin-left: 10px;	
