--- a/css/integrated.css
+++ b/css/integrated.css
@@ -1320,7 +1320,8 @@ div.demo-description {
     background-color:#EFEFEF;
     border:1px solid #C1C1C1;
     font-weight:normal;
-    height:14px;
+    height:10px;
+    font-size: 10px;
     margin-left:1px;
     min-width:15px;
     padding:1px 2px;
@@ -1330,7 +1331,8 @@ div.demo-description {
     background-color:#EFEFEF;
     border:1px solid #C1C1C1;
     font-weight:normal;
-    height:14px;
+    height:10px;
+    font-size: 10px;
     margin-left:1px;
     min-width:15px;
     padding:1px 2px;
