--- a/trunk/css/integrated.css
+++ b/trunk/css/integrated.css
@@ -1317,17 +1317,17 @@ div.demo-description {
     overflow: inherit;
 }
 ._like,._liked{
-    background:url("images/t.gif") no-repeat;
+    background:url("images/liked.gif") no-repeat;
     padding:0px 17px 0px 7px;
     display: inline;
     line-height: 19px;
     background-position: 100% 0px;
     font-size:11px;
-    background-color:#CAD4E7;
+    
     color:#db1c00;
 }
 ._like:hover{
-    background:url("images/t.gif") no-repeat;
+    background:url("images/liked.gif") no-repeat;
     padding:0px 17px 0px 7px;
     display: inline;
     line-height: 19px;
