Added vietnamwiki description in /about, Fixed </div tag in viewtopicBody.php, fixed escaped codes in summaries index2.php
git-svn-id: svn://localhost/home/vnwkrepos/trunk@407 46499d64-588c-4cb2-b276-432f5e434212

--- a/css/integrated.css
+++ b/css/integrated.css
@@ -705,15 +705,6 @@ h3  {
 	background-color : #990000;
 }
 
-b  {
-	color : black;
-	font-weight : bold;
-	font-size : 12px;
-	font-family : Arial, Helvetica, serif;
-	line-height : 18px;
-}
-
-
 span.style5 {
 	color : gray;
 	font-weight : normal;
@@ -1314,7 +1305,7 @@ div.demo-description {
 }
 #view_qanda{
     margin: 5px;
-    overflow: inherit;
+    overflow: hidden;
 }
 
 
