--- a/css/integrated.css
+++ b/css/integrated.css
@@ -685,6 +685,7 @@ h1  {
 	border-color : gray;
 }
 
+
 div.title_wrapper { border-bottom: 1px solid #777; margin-bottom: 20px; margin-top: 10px;}
 
     h1.viewtopic_title {
@@ -759,6 +760,16 @@ td  {
 	font-size : 12px;
 	font-family : Arial, Helvetica, serif;
 }
+
+div.founder_words {
+    background: #FFF;
+    border: 1px solid #AAA;
+    padding: 15px;
+    font-size: 14px;
+    line-height: 1.4em;
+    font-family: courier;
+}
+
 
 a.latestact {
 	color : Olive;
